# AlphaDynamics

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE-MANUSCRIPT.md  NOTICE  PRIVACY.md  README.md  index.html  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
alphadynamics/: __init__.py  ad_init.py  api.py  banner.py  baselines.py  cli.py  data.py  geometry.py  metrics.py  models.py  rollout.py  training.py  utils.py  version_check.py  weights.py
data/: README.md
docs/: AUDIT_MANIFEST_2026_04_25.md  MORNING_BRIEF_2026_04_29.md  OUTREACH_2026_04_28.md  PREPRINT_PACKAGE_2026_04_25.md  PRODUCT_V1_2026_04_28.md  RELEASE_NOTES_v2_2026_04_29.md  RESEARCH_CLOSEOUT_2026_04_24.md  REVIEWER_ATTACK_ANALYSIS_2026_04_28.md  REVIEWER_RISK_REGISTER_2026_04_28.md
examples/3d_movie_demo/: README.md  make_demo.sh  viewer.html
paper/: main.md  make_figures.py  paper.tex  references.bib
plugins/alphadynamics/.claude-plugin/: plugin.json
plugins/alphadynamics/skills/alphadynamics/: SKILL.md
results/: alphadynamics_audit_report.md  ar1_baseline_aligned40.json  ar1_baseline_aligned40_n98.json  audit_statistics.json  audit_statistics.md  audit_statistics_v2.json  audit_statistics_v2.md  head_to_head_4aa_alphadynamics_rollout.json  head_to_head_4aa_alphadynamics_rollout.md  head_to_head_4aa_alphadynamics_rollout_kappa1.json  head_to_head_4aa_alphadynamics_rollout_kappa1.md  head_to_head_4aa_unified_metric.json  head_to_head_4aa_unified_metric.md  jsd_reference_scale.json  k_sweep_ablation.json  kappa_sweep_aligned3.json  mdcath_aligned20_4000step_cpu.json  mdcath_aligned20_4000step_cpu.md  mdcath_aligned20_n100_4000step_gpu.json  mdcath_aligned20_n100_4000step_gpu.md  ramachandran_aligned3_4000step_gpu.json  ramachandran_aligned3_4000step_gpu.md  ramachandran_aligned3_n98_4000step_gpu.json  ramachandran_aligned3_n98_4000step_gpu.md  strong_baseline_3dom_3seed_4000step_cuda.json  strong_baseline_3dom_3seed_4000step_cuda.md  strong_baseline_n48_pilot_500step_earlystop_cuda.json  strong_baseline_n48_pilot_500step_earlystop_cuda.md  temporal_gru_3dom_3seed_4000step_cuda.json  temporal_gru_3dom_3seed_4000step_cuda.md  timewarp_4aa_large_test3_nll.json  timewarp_4aa_large_test3_nll.md  timewarp_rollout_4aa.json
src/: alphadynamics_cli.py  ar1_baseline.py  audit_statistics.py  audit_statistics_v2.py  chain_md.py  chain_model.py  head_to_head_timewarp.py  jsd_reference_scale.py  jsd_unified_eval.py  k_sweep.py  kappa_sweep.py  mdcath_benchmark.py  mdcath_convert_alltemps.py  mdcath_convert_v3.py  ramachandran_energy_v2.py  rollout_eval.py  run_aligned5_benchmark.sh  strong_baseline_audit.py  temporal_baseline_audit.py  timewarp_comparison.py  train_chain.py  train_real.py
tests/: test_cli_product.py  test_geometry.py  test_metrics.py  test_model.py
