[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadynamics"
version = "0.3.1"
description = "Compact sequence-only neural propagator for protein torsion dynamics — 2.39× lower JSD than Microsoft Timewarp at 3000× fewer parameters."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Krzysztof Gwozdz", email = "krisss0gwo@gmail.com" },
]
maintainers = [
    { name = "Krzysztof Gwozdz", email = "krisss0gwo@gmail.com" },
]
keywords = [
    "protein-dynamics",
    "molecular-dynamics",
    "torsion-angles",
    "phase-oscillators",
    "neural-ode",
    "ramachandran",
    "ml-for-biology",
    "reservoir-computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# For reproducing the v2 paper (per-system models in legacy src/).
paper = [
    "torchdiffeq>=0.2.5",
    "mdtraj>=1.9; platform_machine != 'aarch64'",
    "h5py",
    "scipy>=1.10",
    "huggingface_hub",
    "matplotlib>=3.7",
]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
all = [
    "alphadynamics[paper,viz,dev]",
]

[project.scripts]
alphadynamics = "alphadynamics.cli:main"

[project.urls]
Homepage = "https://github.com/krisss0mecom/AlphaDynamics"
Repository = "https://github.com/krisss0mecom/AlphaDynamics"
Issues = "https://github.com/krisss0mecom/AlphaDynamics/issues"
Releases = "https://github.com/krisss0mecom/AlphaDynamics/releases"
"Paper v2 DOI" = "https://doi.org/10.5281/zenodo.19877815"
"Concept DOI" = "https://doi.org/10.5281/zenodo.19788564"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphadynamics*"]
exclude = ["tests*", "scripts*", "configs*", "docs*", "checkpoints*", "results*", "private_*", "src*", "paper*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
